--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ nav {
   padding-left: 2rem;
 }
 
-button{
+.header-button{
   background-color:aliceblue;
   font-size:15px;
   margin-right: 10px;
@@ -48,7 +48,7 @@ button{
 .intro{
  font-size: 2rem;
  margin-top: 0 ;
- padding-top: 0;
+ padding-bottom: 1rem;
  padding-left: 2rem;
 }
 
@@ -56,64 +56,155 @@ button{
   padding-top: 1rem;
   padding-left: 2rem;
 }
-.hero-header {
-  background: linear-gradient(rgba(248, 223, 173, 0.1), rgba(248, 223, 173, 0.1));
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.comp1-search{
+padding-left: 2rem;
+padding-bottom: 1rem;
+}
+.compo2-shipping{
+  background-color: aliceblue;
+  margin: 1rem;
+  height: 20rem;
+  width: 20rem;
+  border-radius: 1rem;
 }
 
-.carousel-item {
-  position: relative;
+.compo2{
+  display:flex;
+  flex-direction: row;
+
+  padding-left: 3rem;
 }
 
-.carousel-item a {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 25px;
-  background: linear-gradient(rgba(255, 181, 36, 0.7), rgba(255, 181, 36, 0.7));
+.compo2-img{
+ 
+ font-size: 3rem;
 }
 
-.carousel-control-next,
-.carousel-control-prev {
-  width: 48px;
-  height: 48px;
-  border-radius: 48px;
-  border: 1px solid var(--bs-white);
-  background: var(--bs-primary);
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+.compo3-button{
+  background-color:rgb(251, 251, 251);
+  font-size:15px;
+  margin-right: 10px;
+  border-radius: 2rem;
+  
 }
 
-.carousel-control-next {
-  margin-right: 20px;
+.compo3-2{
+  padding-right: 20rem;
 }
 
-.carousel-control-prev {
-  margin-left: 20px;
-}
+.card{
 
-.page-header {
-  position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  padding-left: 3rem;
+  padding-right: 3rem;
+ 
+ }
+ .cardin{
+  margin-top: 1rem;
+  margin-right: 10px;
+  background-color: aliceblue;
+  border-radius: 1rem;
+  border: 1rem;
+  width: 20rem;
+  
+ }
 
-@media (min-width: 992px) {
-  .hero-header,
-  .page-header {
-      margin-top: 152px !important;
-  }
-}
+ .card-img{
+  width: 20rem;
+  border-radius: 1rem;
+ }
+ .indibreed{
+ 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-left: 3rem;
+  padding-right: 3rem;
+ }
+ .compo4-heading{
+  padding-left: 1rem;
+  background-color: aliceblue ;
+ }
+ .compo5{
+  background-color:white;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  margin-top: 2rem;
+  padding-right: 3rem;
+  padding-left: 3rem;
+ }
+ .compo5-part1{
+  font-size: larger;
+  margin-top: 10rem;
+  
+ }
 
-@media (max-width: 992px) {
-  .hero-header,
-  .page-header {
-      margin-top: 97px !important;
-  }
+ .compo6-p1{
+  background-color: aliceblue;
+ }
+  
+ .compo6-p2{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  margin-top: 2rem;
+  padding-right: 3rem;
+  padding-left: 3rem;
+ }
+ 
+ .compo7{
+  background-color: aliceblue;
+  display: flex;
+  margin-top: 2rem;
+  justify-content: space-evenly;
+  margin-left: 2rem;
+  margin-right: 2rem;
+ }
+ .compo7-p1{
+  background-color: white;
+  margin: 2rem;
+  width: 20rem;
+  height:20rem;
+  border-radius: 1rem;
+ }
+
+ .testmo-box{
+  background-color: aliceblue;
+  margin-left: 2rem ;
+ margin-right: 2rem;
+ border-radius: 1rem;
 }
+ .testmo-pic{
+  display: flex;
+  flex-direction: row;
+  padding-left: 2rem;
+  gap:2rem
+ }
+ .compo8{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+ }
+ .f-p1{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  
+ }
+ .footer{
+  background-color:rgb(187, 155, 155);
+  margin-top: 2rem;
+ }
+ .f-input{
+ height: 2rem; 
+ margin-top: 2rem;
+ border-radius: 1rem;
+ }
+ .f-p2{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+ }
